refactor: MenuService 도메인으로 책임 분리