@@ -1,19 +1,19 @@
 package kitchenpos.application;
 
 import static kitchenpos.fixture.MenuGroupFixture.한마리메뉴;
+import static kitchenpos.fixture.MenuProductFixture.맵슐랭;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertAll;
 
 import java.math.BigDecimal;
-import java.util.Collections;
 import java.util.List;
+import kitchenpos.application.dto.request.MenuCreateRequest;
+import kitchenpos.application.dto.response.MenuResponse;
 import kitchenpos.dao.MenuDao;
 import kitchenpos.dao.MenuGroupDao;
 import kitchenpos.dao.MenuProductDao;
 import kitchenpos.dao.ProductDao;
-import kitchenpos.domain.Menu;
-import kitchenpos.domain.MenuProduct;
 import kitchenpos.fixture.MenuFixture;
 import kitchenpos.fixture.MenuGroupFixture;
 import kitchenpos.fixture.MenuProductFixture;
@@ -26,7 +26,6 @@ class MenuServiceTest {
 
     private MenuDao menuDao;
     private MenuGroupDao menuGroupDao;
-    private MenuProductDao menuProductDao;
     private ProductDao productDao;
     private MenuService menuService;
 
@@ -34,98 +33,42 @@ class MenuServiceTest {
     void setUp() {
         menuDao = MenuFixture.setUp().getMenuDao();
         menuGroupDao = MenuGroupFixture.setUp().getMenuGroupDao();
-        menuProductDao = MenuProductFixture.setUp().getMenuProductDao();
         productDao = ProductFixture.setUp().getProductDao();
-        menuService = new MenuService(menuDao, menuGroupDao, menuProductDao, productDao);
+        menuService = new MenuService(menuDao, menuGroupDao, productDao);
     }
 
     @Test
     @DisplayName("메뉴를 생성한다.")
     void createMenu() {
         final BigDecimal menuPrice = new BigDecimal(20_000);
-        Menu menu = MenuFixture.createMenu("맵슐랭순살", menuPrice, 한마리메뉴);
-        final MenuProduct maebsyullaeng = menuProductDao.findById(MenuProductFixture.맵슐랭)
-                .orElseThrow();
-        menu.setMenuProducts(Collections.singletonList(maebsyullaeng));
+        final MenuCreateRequest request = MenuFixture.createMenuRequest("맵슐랭순살", menuPrice, 한마리메뉴,
+                List.of(MenuProductFixture.createMenuProduct(맵슐랭)));
 
-        final Menu persistedMenu = menuService.create(menu);
+        final MenuResponse menuResponse = menuService.create(request);
 
         assertAll(
-                () -> assertThat(persistedMenu.getId()).isNotNull(),
-                () -> assertThat(persistedMenu.getName()).isEqualTo("맵슐랭순살"),
-                () -> assertThat(persistedMenu.getPrice()).isEqualTo(menuPrice)
+                () -> assertThat(menuResponse.getId()).isNotNull(),
+                () -> assertThat(menuResponse.getName()).isEqualTo("맵슐랭순살"),
+                () -> assertThat(menuResponse.getPrice()).isEqualTo(menuPrice)
         );
-    }
-
-    @Test
-    @DisplayName("메뉴의 가격이 null인 경우 예외 발생")
-    void whenMenuPriceIsNull() {
-        Menu menu = MenuFixture.createMenuByPrice(null);
-        final MenuProduct maebsyullaeng = menuProductDao.findById(MenuProductFixture.맵슐랭)
-                .orElseThrow();
-        menu.setMenuProducts(Collections.singletonList(maebsyullaeng));
-
-        assertThatThrownBy(() -> menuService.create(menu))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    @DisplayName("메뉴의 가격이 음수일 경우 예외 발생")
-    void whenMenuPriceIsNegative() {
-        Menu menu = MenuFixture.createMenuByPrice(new BigDecimal(-1000));
-        final MenuProduct maebsyullaeng = menuProductDao.findById(MenuProductFixture.맵슐랭)
-                .orElseThrow();
-        menu.setMenuProducts(Collections.singletonList(maebsyullaeng));
-
-        assertThatThrownBy(() -> menuService.create(menu))
-                .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     @DisplayName("메뉴 그룹이 올바르지 않은 경우 예외 발생")
     void whenInvalidMenuGroup() {
         long invalidMenuGroupId = 99999L;
-        final Menu menu = MenuFixture.createMenu(invalidMenuGroupId);
-        final MenuProduct maebsyullaeng = menuProductDao.findById(MenuProductFixture.맵슐랭)
-                .orElseThrow();
-        menu.setMenuProducts(Collections.singletonList(maebsyullaeng));
+        final MenuCreateRequest request = MenuFixture.createMenuRequest(invalidMenuGroupId);
 
-        assertThatThrownBy(() -> menuService.create(menu))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    @DisplayName("상품이 올바르지 않은 경우 예외 발생")
-    void whenInvalidProduct() {
-        long invalidProductId = 99999L;
-        final Menu menu = MenuFixture.createMenu();
-
-        final MenuProduct menuProduct = MenuProductFixture.createMenuProduct(invalidProductId);
-        menu.setMenuProducts(Collections.singletonList(menuProduct));
-
-        assertThatThrownBy(() -> menuService.create(menu))
-                .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    @Test
-    @DisplayName("메뉴의 가격이 메뉴의 상품가격의 합보다 비싼 경우 예외 발생")
-    void whenMenuProductsIsMoreExpensivePrice() {
-        final Menu menu = MenuFixture.createMenuByPrice(new BigDecimal(100_000_000));
-        final MenuProduct maebsyullaeng = menuProductDao.findById(MenuProductFixture.맵슐랭)
-                .orElseThrow();
-
-        menu.setMenuProducts(Collections.singletonList(maebsyullaeng));
-
-        assertThatThrownBy(() -> menuService.create(menu))
+        assertThatThrownBy(() -> menuService.create(request))
                 .isInstanceOf(IllegalArgumentException.class);
     }
 
     @Test
     @DisplayName("메뉴의 목록을 가져온다.")
     void getList() {
-        final List<Menu> expectedMenus = MenuFixture.setUp()
+        final List<MenuResponse> expectedMenus = MenuFixture.setUp()
                 .getFixtures();
-        final List<Menu> menus = menuService.list();
+        final List<MenuResponse> menus = menuService.list();
 
         assertAll(
                 () -> assertThat(menus).hasSameSizeAs(expectedMenus),
